# cordis-dmp-analysis

./: .gitignore  README.md  pyproject.toml
docs/: example-template-matching-OPALS.md
src/cordis_dmp/: __init__.py  cli.py  corpus.py  download.py  extract.py  metadata.py  template.py
